repair Block3. Task 6
