# Block3/Task5/server/Application/App.php
@@ -53,6 +53,7 @@ class App
         header('Access-Control-Allow-Origin: http://localhost:5173');
         header('Access-Control-Allow-Methods: GET, POST, PATCH, DELETE, OPTIONS');
         header('Access-Control-Allow-Headers: Content-Type, Authorization, Idempotency-Key');
+        header('Content-Type: application/json');
 
         if($this->request->getMethod() === HttpMethods::OPTIONS) {
             http_response_code(204);
